Add images and create nav menu toggle on click

--- a/styles.css
+++ b/styles.css
@@ -24,27 +24,34 @@ h2 {
 }
 
 .header-container {
+    position: relative;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 1.5rem;
 }
 
 .logo {
-    justify-self: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 4rem;
 }
 
 .nav-logo {
-    justify-self: end;
+    width: 4rem;
 }
 
 .mobile-menu {
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: end;
 }
 
 .closing-x {
     align-self: start;
+    width: 3rem;
 }
 
 .nav-links {
@@ -56,6 +63,8 @@ h2 {
 }
 
 .nav-link-arrow {
+    width: 1rem;
+    height: auto;
 }
 
 .nav-input {
@@ -64,22 +73,37 @@ h2 {
 }
 
 .sign-in-btn {
+    width: max-content;
+    padding: 1rem 1.5rem;
+    background-color: lightblue;
 }
 
 .search-bar {
-    /* background-image: image of magnifying glass; */
+    background-image: url(assets/magnify.svg);
+    height: 1.5rem;
+    width: 50ch;
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
 }
 
 .scroll-cards {
+    display: flex;
+    gap: 1rem;
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
 }
 
 .item-img {
+    width: 100%;
+    height: auto;
 }
 
 .card-info {
@@ -99,6 +123,7 @@ main {
     background-color: lightblue;
     border-radius: 10px;
     padding: 0.5rem;
+    text-align: center;
 }
 
 .arrow-see-all {
@@ -110,4 +135,8 @@ main {
 footer {
     display: flex;
     justify-content: space-between;
+}
+
+.footer-links-group > p {
+    font-size: 0.8rem;
 }
