--- a/styles.css
+++ b/styles.css
@@ -47,11 +47,12 @@ h2 {
     display: none;
     flex-direction: column;
     align-items: end;
+    padding: 1.5rem;
 }
 
 .closing-x {
     align-self: start;
-    width: 3rem;
+    width: 3.5rem;
 }
 
 .nav-links {
@@ -59,12 +60,19 @@ h2 {
     flex-direction: column;
 }
 
+.nav-item-div {
+    display: flex;
+    justify-content: end;
+}
+
 .nav-item {
+    font-size: 2.5rem;
+    margin-right: -0.5rem;
 }
 
 .nav-link-arrow {
-    width: 1rem;
-    height: auto;
+    width: 3rem;
+    margin-top: 0.3rem;
 }
 
 .nav-input {
