--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -15,6 +19,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    cursor: pointer;
+}
+
 h1 {
     font-size: 1.5rem;
 }
@@ -23,8 +31,15 @@ h2 {
     font-size: 1.2rem;
 }
 
-.header-container {
+header {
     position: relative;
+    scroll-margin-top: 10rem;
+}
+
+.header-container {
+    position: fixed;
+    background-color: white;
+    top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -34,6 +49,7 @@ h2 {
 
 .logo {
     position: absolute;
+    top: 1.5rem;
     left: 50%;
     transform: translateX(-50%);
     height: 4rem;
@@ -41,6 +57,10 @@ h2 {
 
 .nav-logo {
     width: 4rem;
+}
+
+.nav-logo:hover {
+    cursor: pointer;
 }
 
 .mobile-menu {
@@ -57,6 +77,10 @@ h2 {
     align-self: start;
     width: 2rem;
     margin: 1rem 0 0 1rem;
+}
+
+.closing-x:hover {
+    cursor: pointer;
 }
 
 .nav-links {
@@ -119,7 +143,7 @@ main {
     display: flex;
     flex-direction: column;
     margin-left: 3rem;
-    margin-top: 3rem;
+    margin-top: 9rem;
 }
 
 .scroll-cards {
@@ -148,12 +172,13 @@ main {
 
 .map-card > .item-img {
     width: calc(100% - 2rem);
-    height: auto;
+    height: 35vh;
     margin: 1rem 0 2rem 0;
 }
 
 .item-img {
     border-radius: 10px;
+    height: 30vh;
 }
 
 .card-info {
