--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ main {
     width: 65vw;
 }
 
-.map-card > .item-img {
+.map-card .item-img {
     width: calc(100% - 2rem);
     height: 35vh;
     margin: 1rem 0 2rem 0;
