--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,10 @@ header {
     font-size: 2rem;
 }
 
+.nav-item:hover {
+    cursor: pointer;
+}
+
 .nav-link-arrow {
     width: 1rem;
     height: auto;
@@ -146,7 +150,7 @@ header {
     font-weight: bold;
 }
 
-.search-items, .map-search-items, .events-search-items {
+.search-items, .map-search-items, .lineup-search-items {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -409,24 +413,24 @@ footer {
     margin-top: auto;
 }
 
-/* for studio map page + events page */
+/* for studio map page + lineup pages */
 
 .map-main {
     align-items: center;
 }
 
 .map-main > h1,
-.events-top > h1 {
+.lineup-top > h1 {
     margin-bottom: 1.5rem;
 }
 
 .map-main .search-bar,
-.events-main .search-bar {
+.lineup-main .search-bar {
     width: 25ch;
 }
 
 .map-search-items,
-.events-search-items {
+.lineup-search-items {
     margin-bottom: 1.5rem;
 }
 
@@ -503,48 +507,57 @@ footer {
     border-radius: 50%;
 }
 
-/* for events page lineup */
+/* for lineup pages */
 
-.events-container {
+.lineup-container {
     display: flex;
     flex-direction: column;
+    width: calc(100% - 2rem);
     gap: 1rem;
-    margin: 1rem 1rem 1.5rem 3rem;
+    margin: 1rem 0 1.5rem 2rem;
+    overflow-x: hidden;
 }
 
-.events-top {
+.lineup-top {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.events-lineup {
+.lineup-lineup {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
 }
 
-.event-item {
+.lineup-item {
     width: 45%;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.event-item-img {
+.lineup-item-img {
     border-radius: 10px;
     height: 35vh;
 }
 
-.event-info-box {
+.lineup-info-box {
     background-color: #C3D5F0;
     padding: 1rem 1.5rem;
     border-radius: 10px;
     margin-bottom: 1rem;
 }
 
-.event-title-icon {
+.lineup-title-icon {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 0.5rem;
+    gap: 0.5rem;
+}
+
+.lineup-title-icon > .heart-icon {
+    width: 1.3rem;
+    height: 1.3rem;
 }
