Start work on filter menus, WIP

--- a/styles.css
+++ b/styles.css
@@ -561,3 +561,22 @@ footer {
     width: 1.3rem;
     height: 1.3rem;
 }
+
+/* for filter menu */
+
+.filter-menu {
+    display: flex;
+    gap: 1.2rem;
+}
+
+.filter-selector {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+}
+
+.filter-arrow {
+    width: 0.7rem;
+    height: 0.7rem;
+    margin-top: 0.3rem;
+}
