--- a/styles.css
+++ b/styles.css
@@ -57,11 +57,12 @@ header {
     top: 1.5rem;
     left: 50%;
     transform: translateX(-50%);
-    height: 4rem;
+    height: 3.5rem;
 }
 
 .nav-logo {
-    width: 4rem;
+    margin-top: 0.8rem;
+    width: 2.8rem;
 }
 
 .nav-logo:hover {
@@ -81,7 +82,7 @@ header {
 
 .closing-x {
     align-self: start;
-    width: 2rem;
+    width: 1.8rem;
     margin: 1rem 0 0 1rem;
 }
 
@@ -92,7 +93,7 @@ header {
 .nav-links {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1.2rem;
 }
 
 .nav-item-div {
@@ -103,7 +104,7 @@ header {
 }
 
 .nav-item {
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .nav-item:hover {
@@ -165,7 +166,7 @@ header {
     border-radius: 15px;
     border: 1px solid black;
     height: 2.5rem;
-    width: 30ch;
+    width: 80vw;
     font-size: 1.5rem;
     padding: 0 1rem;
     padding-left: 1rem;
@@ -191,7 +192,7 @@ main {
 }
 
 .main-left-margin {
-    margin-left: 3rem;
+    margin-left: 2rem;
 }
 
 .scroll-cards {
@@ -273,7 +274,7 @@ main {
 }
 
 .arrow-see-all {
-    width: 2rem;
+    width: 1.8rem;
     margin-right: 2rem;
     margin-left: 0.5rem;
 }
@@ -283,7 +284,7 @@ main {
 footer {
     display: flex;
     justify-content: space-between;
-    margin: 1rem 0 2rem 3rem;
+    margin: 1rem 0 2rem 2rem;
 }
 
 .footer-links-group {
@@ -292,7 +293,7 @@ footer {
 }
 
 /* figure out smooth scroll and link animations */
-.footer-links-group>p {
+.footer-links-group > p {
     font-size: 0.8rem;
 }
 
@@ -304,9 +305,9 @@ footer {
 /* for the about page */
 
 .about-item-img {
-    width: calc(100% - 3rem);
+    width: calc(100% - 2rem);
     height: 35vh;
-    margin: 0 0 2rem 0;
+    margin-bottom: 2rem;
     border-radius: 10px;
 }
 
@@ -314,7 +315,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    width: calc(100% - 3rem);
+    width: calc(100% - 2rem);
 }
 
 .about-h2 {
@@ -331,7 +332,7 @@ footer {
 }
 
 .about-footer {
-    margin-top: 4rem;
+    margin-top: 3rem;
 }
 
 /* for sign-in and register pages */
@@ -426,7 +427,7 @@ footer {
 
 .map-main .search-bar,
 .lineup-main .search-bar {
-    width: 25ch;
+    width: 80vw;
 }
 
 .map-search-items,
@@ -435,7 +436,7 @@ footer {
 }
 
 .map-placeholder-img {
-    width: calc(100% - 6rem);
+    width: calc(100% - 4rem);
     height: 35vh;
     margin: 0 0 2rem 0;
     border-radius: 5px;
@@ -444,7 +445,7 @@ footer {
 .blue-background, .found-studio-item {
     background-color: #C3D5F0;
     width: 100%;
-    padding: 2rem 3rem;
+    padding: 1.5rem 2rem;
     display: flex;
 }
 
@@ -477,45 +478,26 @@ footer {
     margin-bottom: 2rem;
 }
 
-.found-studio-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+/* for lineup pages */
 
-.map-studio-found-text {
+.lineup-main {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
-}
-
-.map-studio-name-icon {
-    display: flex;
     align-items: center;
-    gap: 0.5rem;
+    width: 100%;
 }
-
-.map-studio-found-text h2 {
-    font-weight: normal;
-    font-size: 1rem;
-}
-
-.avatar-circle {
-    height: 4rem;
-    width: 4rem;
-    background-color: white;
-    border-radius: 50%;
-}
-
-/* for lineup pages */
 
 .lineup-container {
     display: flex;
     flex-direction: column;
     width: calc(100% - 2rem);
     gap: 1rem;
-    margin: 1rem 0 1.5rem 2rem;
+    margin: 1rem 0 1.5rem 0;
     overflow-x: hidden;
+}
+
+.lineup-container > h1 {
+   margin-left: 0.7rem;
 }
 
 .lineup-top {
@@ -528,6 +510,7 @@ footer {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    justify-content: center;
 }
 
 .lineup-item {
@@ -539,7 +522,7 @@ footer {
 
 .lineup-item-img {
     border-radius: 10px;
-    height: 35vh;
+    height: 30vh;
 }
 
 .lineup-info-box {
