--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ main {
 }
 
 .main-left-margin {
-    margin-left: 2rem;
+    margin-left: 1.5rem;
 }
 
 .scroll-cards {
@@ -222,7 +222,7 @@ main {
 }
 
 .map-card .item-img {
-    width: calc(100% - 2rem);
+    width: calc(100% - 1.5rem);
     height: 35vh;
     margin: 1rem 0 2rem 0;
 }
@@ -284,7 +284,7 @@ main {
 footer {
     display: flex;
     justify-content: space-between;
-    margin: 1rem 0 2rem 2rem;
+    margin: 1rem 0 2rem 1.5rem;
 }
 
 .footer-links-group {
@@ -305,7 +305,7 @@ footer {
 /* for the about page */
 
 .about-item-img {
-    width: calc(100% - 2rem);
+    width: calc(100% - 1.5rem);
     height: 35vh;
     margin-bottom: 2rem;
     border-radius: 10px;
@@ -315,7 +315,7 @@ footer {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    width: calc(100% - 2rem);
+    width: calc(100% - 1.5rem);
 }
 
 .about-h2 {
@@ -445,7 +445,7 @@ footer {
 .blue-background, .found-studio-item {
     background-color: #C3D5F0;
     width: 100%;
-    padding: 1.5rem 2rem;
+    padding: 1.5rem;
     display: flex;
 }
 
@@ -471,7 +471,6 @@ footer {
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 1rem;
 }
 
 .found-studios-container:last-child {
@@ -489,15 +488,16 @@ footer {
 
 .lineup-container {
     display: flex;
-    flex-direction: column;
-    width: calc(100% - 2rem);
+    justify-content: space-evenly;
+    width: calc(100% - 3rem);
     gap: 1rem;
-    margin: 1rem 0 1.5rem 0;
+    flex-direction: column;
     overflow-x: hidden;
 }
 
-.lineup-container > h1 {
-   margin-left: 0.7rem;
+.lineup-container > h1,
+.found-studios-container > h1 {
+    grid-column: 1 / -1;
 }
 
 .lineup-top {
@@ -507,14 +507,14 @@ footer {
 }
 
 .lineup-lineup {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(140px, 2fr));
+    row-gap: 2rem;
+    column-gap: 1rem;
+    margin-bottom: 2rem;
 }
 
 .lineup-item {
-    width: 45%;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -522,14 +522,13 @@ footer {
 
 .lineup-item-img {
     border-radius: 10px;
-    height: 30vh;
 }
 
 .lineup-info-box {
     background-color: #C3D5F0;
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     border-radius: 10px;
-    margin-bottom: 1rem;
+    font-size: 0.9rem;
 }
 
 .lineup-title-icon {
@@ -559,7 +558,7 @@ footer {
 }
 
 .filter-arrow {
-    width: 0.7rem;
-    height: 0.7rem;
+    width: 0.6rem;
+    height: 0.6rem;
     margin-top: 0.3rem;
 }
