--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
     color: black;
 }
 
+button {
+    color: black;
+}
+
 a {
     color: black;
     text-decoration: none;
@@ -151,7 +155,9 @@ header {
     font-weight: bold;
 }
 
-.search-items, .map-search-items, .lineup-search-items {
+.search-items,
+.map-search-items,
+.lineup-search-items {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -177,7 +183,8 @@ header {
     outline: none;
 }
 
-.search-icon, .map-search-icon {
+.search-icon,
+.map-search-icon {
     display: none;
     height: 1.8rem;
     width: auto;
@@ -231,12 +238,14 @@ main {
     border-radius: 10px;
     height: 30vh;
     width: 55vw;
+    flex-grow: 1;
 }
 
 .card-info {
     background-color: #F2F2F2;
     padding: 0.8rem;
     border-radius: 10px;
+    margin-top: auto;
 }
 
 .name-and-icon {
@@ -293,7 +302,7 @@ footer {
 }
 
 /* figure out smooth scroll and link animations */
-.footer-links-group > p {
+.footer-links-group>p {
     font-size: 0.8rem;
 }
 
@@ -420,8 +429,8 @@ footer {
     align-items: center;
 }
 
-.map-main > h1,
-.lineup-top > h1 {
+.map-main>h1,
+.lineup-top>h1 {
     margin-bottom: 1.5rem;
 }
 
@@ -442,7 +451,8 @@ footer {
     border-radius: 5px;
 }
 
-.blue-background, .found-studio-item {
+.blue-background,
+.found-studio-item {
     background-color: #C3D5F0;
     width: 100%;
     padding: 1.5rem;
@@ -495,8 +505,8 @@ footer {
     overflow-x: hidden;
 }
 
-.lineup-container > h1,
-.found-studios-container > h1 {
+.lineup-container>h1,
+.found-studios-container>h1 {
     grid-column: 1 / -1;
 }
 
@@ -539,12 +549,20 @@ footer {
     gap: 0.3rem;
 }
 
-.lineup-title {
-    overflow-wrap: anywhere;
+.lineup-title,
+.item-name {
+    -ms-word-break: break-all;
+    -ms-word-wrap: break-all;
+    -webkit-word-break: break-word;
+    -webkit-word-wrap: break-word;
+    word-break: break-word;
+    word-wrap: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
     hyphens: auto;
 }
 
-.lineup-title-icon > .heart-icon {
+.lineup-title-icon>.heart-icon {
     width: 1.3rem;
     height: 1.3rem;
 }
@@ -564,7 +582,7 @@ footer {
 .filter-selector {
     display: flex;
     align-items: center;
-    gap: 0.2rem;
+    gap: 0.5rem;
 }
 
 .filter-arrow {
