--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ button {
     color: black;
 }
 
+button:focus-visible {
+    outline: 1px solid black;
+}
+
 a {
     color: black;
     text-decoration: none;
@@ -27,12 +31,20 @@ a:hover {
     cursor: pointer;
 }
 
-h1 {
-    font-size: 1.5rem;
+a:focus {
+    outline: 1px solid black;
 }
 
-h2 {
-    font-size: 1.2rem;
+h1 {
+    font-size: calc(1.2rem + 1vw);
+}
+
+.nav-item > h2 {
+    font-size: calc(1.2rem + 1.5vw);
+}
+
+img:focus {
+    outline: 1px solid black;
 }
 
 header {
@@ -42,31 +54,36 @@ header {
 
 .header-container {
     position: fixed;
-    background-color: white;
     top: 0;
+    background-color: white;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 100%;
     padding: 1.5rem;
+    gap: 0.5rem;
+}
+
+.empty-element {
+    display: none;
 }
 
 .arrow-back {
-    width: 1rem;
-    align-self: start;
+    width: 0.6rem;
+    flex-shrink: 0;
 }
 
 .logo {
-    position: absolute;
-    top: 1.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 3.5rem;
+    width: calc(12rem + 6vw);
 }
 
 .nav-logo {
-    margin-top: 0.8rem;
-    width: 2.8rem;
+    width: calc(2.5rem + 1vw);
+    background: none;
+    border: none;
+    margin-top: 0.5rem;
+    margin-left: auto;
+    flex-shrink: 0;
 }
 
 .nav-logo:hover {
@@ -88,6 +105,8 @@ header {
     align-self: start;
     width: 1.8rem;
     margin: 1rem 0 0 1rem;
+    background: none;
+    border: none;
 }
 
 .closing-x:hover {
@@ -108,7 +127,9 @@ header {
 }
 
 .nav-item {
-    font-size: 1.8rem;
+    font-size: calc(1.2rem + 1.5vw);
+    background: none;
+    border: none;
 }
 
 .nav-item:hover {
@@ -134,7 +155,7 @@ header {
 }
 
 .dropdown-item {
-    font-size: 1.2rem;
+    font-size: calc(1rem + 0.5vw);
 }
 
 .nav-input {
@@ -151,7 +172,7 @@ header {
     border: none;
     border-radius: 15px;
     background-color: #C3D5F0;
-    font-size: 1.5rem;
+    font-size: calc(1rem + 1vw);
     font-weight: bold;
 }
 
@@ -164,18 +185,15 @@ header {
     gap: 0.5rem;
 }
 
-.search-items {
-    margin-bottom: 1rem;
-}
-
 .search-bar {
     border-radius: 15px;
     border: 1px solid black;
     height: 2.5rem;
-    width: 80vw;
-    font-size: 1.5rem;
+    width: min(80vw, 500px);
+    font-size: calc(1rem + 1vw);
     padding: 0 1rem;
     padding-left: 1rem;
+    margin-bottom: 1rem;
 }
 
 .search-bar:focus,
@@ -187,6 +205,7 @@ header {
 .map-search-icon {
     display: none;
     height: 1.8rem;
+    margin-top: -0.5rem;
     width: auto;
 }
 
@@ -214,6 +233,7 @@ main {
     margin-top: 1rem;
     padding-bottom: 2rem;
     margin-bottom: 1rem;
+    scroll-snap-type: x proximity;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -225,19 +245,26 @@ main {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    width: 65vw;
+    width: max(25vw, 200px);
+    scroll-snap-align: start;
 }
 
-.map-card .item-img {
+.map-card-item-img {
     width: calc(100% - 1.5rem);
-    height: 35vh;
-    margin: 1rem 0 2rem 0;
+    aspect-ratio: 16 / 9;
+    max-height: 80vh;
+    border-radius: 5px;
+    margin-top: 1rem;
+}
+
+.map-main .map-card-item-img {
+    margin-bottom: 2rem;
+    width: calc(100% - 3rem);
 }
 
 .item-img {
+    max-height: 45vh;
     border-radius: 10px;
-    height: 30vh;
-    width: 55vw;
     flex-grow: 1;
 }
 
@@ -254,12 +281,15 @@ main {
 }
 
 .item-name {
-    font-size: 1rem;
+    font-size: calc(1rem + 0.3vw);
 }
 
 .heart-icon {
     width: 1.5rem;
     height: 1.5rem;
+    flex-shrink: 0;
+    background: none;
+    border: none;
 }
 
 .item-tags-group {
@@ -272,20 +302,20 @@ main {
     background-color: #C3D5F0;
     border: none;
     border-radius: 6px;
-    font-size: 0.5rem;
-    padding: 0.3rem 1.2rem;
+    font-size: calc(0.5rem + 0.1vw);
+    padding: 0.3rem 1.1rem;
     text-align: center;
 }
 
 .arrow-see-all-container {
     display: flex;
     align-items: center;
+    margin-right: 2rem;
+    margin-left: 0.5rem;
 }
 
 .arrow-see-all {
     width: 1.8rem;
-    margin-right: 2rem;
-    margin-left: 0.5rem;
 }
 
 /* footer starts */
@@ -293,7 +323,7 @@ main {
 footer {
     display: flex;
     justify-content: space-between;
-    margin: 1rem 0 2rem 1.5rem;
+    margin: 3rem 1.8rem 2rem 1.8rem;
 }
 
 .footer-links-group {
@@ -303,12 +333,11 @@ footer {
 
 /* figure out smooth scroll and link animations */
 .footer-links-group>p {
-    font-size: 0.8rem;
+    font-size: calc(0.8rem + 0.2vw);
 }
 
 .arrow-up {
     width: 2rem;
-    margin-right: 2rem;
 }
 
 /* for the about page */
@@ -340,15 +369,12 @@ footer {
     text-decoration: underline;
 }
 
-.about-footer {
-    margin-top: 3rem;
-}
-
 /* for sign-in and register pages */
 
 .sign-in-body {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 100vh;
 }
 
@@ -356,7 +382,6 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50vh;
 }
 
 .sign-in-form {
@@ -384,7 +409,7 @@ footer {
     border: 1px solid black;
     height: 2.5rem;
     width: 28ch;
-    font-size: 1.2rem;
+    font-size: calc(1rem + 0.5vw);
     padding-left: 1rem;
 }
 
@@ -402,7 +427,7 @@ footer {
 .sign-in-buttons {
     display: flex;
     justify-content: center;
-    gap: 2rem;
+    gap: calc(1rem + 0.5vw);
 }
 
 .sign-in-form .sign-in-btn,
@@ -411,16 +436,12 @@ footer {
     padding: 0.5rem 2rem;
     border: none;
     border-radius: 15px;
-    font-size: 1.2rem;
+    font-size: calc(1rem + 0.6vw);
     font-weight: bold;
 }
 
 .register-btn {
     background-color: #F2F2F2;
-}
-
-.sign-in-footer {
-    margin-top: auto;
 }
 
 /* for studio map page + lineup pages */
@@ -434,60 +455,14 @@ footer {
     margin-bottom: 1.5rem;
 }
 
-.map-main .search-bar,
 .lineup-main .search-bar {
-    width: 80vw;
+    width: min(80vw, 500px);
+    margin-bottom: 1rem;
 }
 
-.map-search-items,
 .lineup-search-items {
     margin-bottom: 1.5rem;
 }
-
-.map-placeholder-img {
-    width: calc(100% - 4rem);
-    height: 35vh;
-    margin: 0 0 2rem 0;
-    border-radius: 5px;
-}
-
-.blue-background,
-.found-studio-item {
-    background-color: #C3D5F0;
-    width: 100%;
-    padding: 1.5rem;
-    display: flex;
-}
-
-.blue-background {
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.popular-locations-header {
-    margin-bottom: .5rem;
-}
-
-.popular-location-item {
-    display: flex;
-    justify-content: space-between;
-}
-
-.popular-location-number {
-    font-weight: normal;
-}
-
-.found-studios-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.found-studios-container:last-child {
-    margin-bottom: 2rem;
-}
-
-/* for lineup pages */
 
 .lineup-main {
     display: flex;
@@ -518,10 +493,9 @@ footer {
 
 .lineup-lineup {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 2fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     row-gap: 2rem;
     column-gap: 1rem;
-    margin-bottom: 2rem;
 }
 
 .lineup-item {
@@ -532,13 +506,13 @@ footer {
 
 .lineup-item-img {
     border-radius: 10px;
+    height: min(40vh, 250px);
 }
 
 .lineup-info-box {
     background-color: #C3D5F0;
     padding: 1rem;
     border-radius: 10px;
-    font-size: 0.9rem;
 }
 
 .lineup-title-icon {
@@ -546,7 +520,7 @@ footer {
     justify-content: space-between;
     align-items: start;
     margin-bottom: 0.5rem;
-    gap: 0.3rem;
+    gap: 0.5rem;
 }
 
 .lineup-title,
@@ -563,8 +537,8 @@ footer {
 }
 
 .lineup-title-icon>.heart-icon {
-    width: 1.3rem;
-    height: 1.3rem;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 /* for filter menu */
@@ -572,21 +546,27 @@ footer {
 .filter-menu {
     display: flex;
     flex-wrap: wrap;
-    gap: 1.2rem;
+    gap: 1rem;
 }
 
 .filter-expanded {
     flex-basis: 100%;
+    margin-top: -0.5rem;
 }
 
 .filter-selector {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.2rem;
+}
+
+.filter-selector > * {
+    background: none;
+    border: none;
 }
 
 .filter-arrow {
     width: 0.6rem;
     height: 0.6rem;
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
 }
