--- a/styles.css
+++ b/styles.css
@@ -271,14 +271,14 @@ h2.nav-item:hover {
 
     .nav-links {
         flex-direction: row;
-        align-items: center;
+        align-items: start;
         width: 100%;
         margin: 0 0.3rem;
     }
 
     .nav-item-div {
-        justify-content: center;
-        width: fit-content;
+        display: flex;
+        justify-content: start;
     }
 
     .nav-item {
@@ -301,11 +301,17 @@ h2.nav-item:hover {
 
     .dropdown-container {
         display: none;
+        visibility: hidden;
+        height: 0;
+        flex-direction: column;
+        align-items: start;
+        gap: 0.5rem;
+        overflow: hidden;
+        transition: height 0.5s ease-in-out;
     }
 
     .dropdown-item {
         font-size: calc(1rem + 0.1vw);
-        flex-basis: 100%;
     }
 
     .nav-input {
@@ -318,6 +324,7 @@ h2.nav-item:hover {
         padding: 0.5rem 1.2rem;
         font-size: calc(1rem + 0.3vw);
         margin-left: auto;
+        margin-top: -0.5rem;
     }
 
     .desktop-menu .search-bar {
@@ -327,7 +334,7 @@ h2.nav-item:hover {
     .desktop-menu .search-icon {
         display: block;
         height: 1.5rem;
-        margin-top: 0.05rem;
+        margin-top: -0.08rem;
     }
 }
 
@@ -396,7 +403,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem 1.5rem 1.5rem 1.5rem;
+    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
     font-size: calc(0.8rem + 0.6vw);
 }
 
@@ -408,11 +415,12 @@ main {
 }
 
 .map-card-item-img {
-    margin-bottom: 2rem;
     width: calc(100% - calc(3rem + 2vw));
     scroll-margin-bottom: 80vh;
     aspect-ratio: 16 / 9;
     max-height: 80vh;
+    margin-bottom: 1.5rem;
+    border-radius: 5px;
 }
 
 .item-img {
