--- a/styles.css
+++ b/styles.css
@@ -237,15 +237,15 @@ h2.nav-item:hover {
     outline: none;
 }
 
-.search-icon,
+.mobile-menu .search-icon,
 .map-search-icon {
     display: none;
-    height: 1.8rem;
-    margin-top: -0.5rem;
+    height: 1.7rem;
+    margin-top: -1.1rem;
     width: auto;
 }
 
-@media (min-width: 890px) {
+@media (min-width: 1050px) {
 
     main {
         padding-top: 4rem;
@@ -262,7 +262,7 @@ h2.nav-item:hover {
         width: 100%;
         padding: 1.5rem calc(1.5rem + 1vw);
         background-color: white;
-        overflow-x: hidden;
+        overflow: visible;
     }
 
     .closing-x {
@@ -274,10 +274,12 @@ h2.nav-item:hover {
         align-items: start;
         width: 100%;
         margin: 0 0.3rem;
+        gap: 2rem;
     }
 
     .nav-item-div {
         display: flex;
+        flex-direction: column;
         justify-content: start;
     }
 
@@ -285,10 +287,12 @@ h2.nav-item:hover {
         font-size: calc(1rem + 0.5vw);
         display: flex;
         gap: 0.2rem;
+        z-index: 100;
     }
 
-    li {
-        margin-right: calc(1rem + 0.3vw);
+    .desktop-dropdown-container>li {
+        margin-right: 0;
+        padding-right: 0;
     }
 
     .nav-item>h2 {
@@ -299,25 +303,26 @@ h2.nav-item:hover {
         width: 0.7rem;
     }
 
-    .dropdown-container {
+    .desktop-dropdown-container {
         display: none;
-        visibility: hidden;
-        height: 0;
+        position: absolute;
+        top: 4rem;
         flex-direction: column;
+        flex-wrap: wrap;
         align-items: start;
-        gap: 0.5rem;
-        overflow: hidden;
+        background-color: white;
+        gap: 1rem;
+        height: max-content;
+        width: max-content;
+        overflow: visible;
         transition: height 0.5s ease-in-out;
+        padding: 1rem 3rem 1rem 1rem;
+        border: 0.1rem solid #C1D4EF;
+        border-radius: 10px;
     }
 
     .dropdown-item {
         font-size: calc(1rem + 0.1vw);
-    }
-
-    .nav-input {
-        flex-direction: row;
-        align-items: center;
-        margin-top: 0;
     }
 
     .desktop-menu .sign-in-btn {
@@ -333,8 +338,12 @@ h2.nav-item:hover {
 
     .desktop-menu .search-icon {
         display: block;
-        height: 1.5rem;
-        margin-top: -0.08rem;
+        height: auto;
+        width: 1.6rem;
+        margin-top: -0.2rem;
+        margin-left: -0.8rem;
+        background: none;
+        border: none;
     }
 }
 
@@ -659,6 +668,15 @@ footer {
     margin-bottom: 1.5rem;
 }
 
+.lineup-main .search-icon {
+    display: none;
+    height: auto;
+    width: 1.8rem;
+    margin-top: -1rem;
+    background: none;
+    border: none;
+}
+
 .lineup-main {
     display: flex;
     flex-direction: column;
@@ -742,18 +760,20 @@ footer {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
 }
 
 .filter-selector {
     display: flex;
     align-items: center;
     gap: 0.2rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
 }
 
 .filter-selector>* {
     background: none;
     border: none;
+    font-size: 1rem;
 }
 
 .filter-selector>*:hover {
