--- a/styles.css
+++ b/styles.css
@@ -237,8 +237,7 @@ h2.nav-item:hover {
     outline: none;
 }
 
-.mobile-menu .search-icon,
-.map-search-icon {
+.mobile-menu .search-icon {
     display: none;
     height: 1.7rem;
     margin-top: -1.1rem;
@@ -668,7 +667,8 @@ footer {
     margin-bottom: 1.5rem;
 }
 
-.lineup-main .search-icon {
+.lineup-main .search-icon,
+.map-main .search-icon {
     display: none;
     height: auto;
     width: 1.8rem;
