--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ li {
     font-size: calc(1.2rem + 1.3vw);
 }
 
-.nav-item-div>*:hover {
+.nav-item-div>*:not(ul):hover {
     cursor: pointer;
 }
 
