--- a/styles.css
+++ b/styles.css
@@ -589,15 +589,16 @@ footer {
 
 .about-main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     width: calc(100% - calc(3rem + 2vw));
     gap: 2rem;
 }
 
 .about-item-img {
     width: 100%;
+    height: 100%;
     min-height: 100%;
-    max-height: 350px;
+    max-height: 400px;
     border-radius: 10px;
 }
 
