--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ header {
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 1.5rem calc(1.5rem + 1vw) 2rem calc(1.5rem + 1vw);
+    padding: 2rem calc(1.5rem + 1vw) 2rem calc(1.5rem + 1vw);
     gap: 0.5rem;
 }
 
@@ -96,6 +96,10 @@ header {
     margin-top: 0.5rem;
     margin-left: auto;
     flex-shrink: 0;
+}
+
+.desktop-social-links {
+    display: none;
 }
 
 .nav-logo:hover {
@@ -260,6 +264,26 @@ h2.nav-item:hover {
     width: auto;
 }
 
+.nav-social-links {
+    display: flex;
+    gap: 1rem;
+    justify-content: end;
+    margin-top: 2rem;
+}
+
+.nav-social-icon {
+    height: 1.3rem;
+    width: 1.3rem;
+    background: none;
+    border: none;
+    transition: .2s ease-in-out 0s;
+}
+
+.nav-social-icon:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
 @media (min-width: 1050px) {
 
     main {
@@ -279,9 +303,31 @@ h2.nav-item:hover {
         display: none;
     }
 
+    .desktop-social-links {
+        position: absolute;
+        right: calc(2rem + 1vw);
+        top: -6.5rem;
+        display: flex;
+        gap: 1rem;
+        justify-content: end;
+    }
+    
+    .desktop-social-icon {
+        height: 1rem;
+        width: 1rem;
+        background: none;
+        border: none;
+        transition: .2s ease-in-out 0s;
+    }
+    
+    .desktop-social-icon:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+
     .desktop-menu {
         position: fixed;
-        margin-top: -3rem;
+        margin-top: -2.5rem;
         display: flex;
         width: 100%;
         padding: 1rem calc(1.5rem + 1vw);
@@ -329,6 +375,7 @@ h2.nav-item:hover {
 
     .nav-link-arrow {
         width: 0.7rem;
+        margin-top: 0;
     }
 
     .desktop-dropdown-container {
@@ -381,7 +428,7 @@ h2.nav-item:hover {
         display: none;
         height: auto;
         width: 1.7rem;
-        margin-top: -0.6rem;
+        margin-top: -0.8rem;
         background: none;
         border: none;
     }
@@ -558,6 +605,7 @@ main {
 /* footer starts */
 
 footer {
+    position: relative;
     display: flex;
     justify-content: space-between;
     margin: 3rem calc(1.5rem + 1vw) 2rem calc(1.5rem + 1vw);
