--- a/styles.css
+++ b/styles.css
@@ -679,8 +679,10 @@ footer {
 
 .sign-in-register-main {
     height: calc(100vh - 15rem);
+    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .sign-in-container {
@@ -688,7 +690,7 @@ footer {
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 67%;
 }
 
 .sign-in-form {
@@ -699,12 +701,25 @@ footer {
     align-items: start;
 }
 
-.input-fields {
+.sign-in-input-fields {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: center;
     gap: 0.5rem;
+}
+
+.input-fields {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.label-and-input {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 0.5rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 .username-input,
@@ -714,7 +729,7 @@ footer {
     border-radius: 15px;
     border: 1px solid black;
     height: 2.5rem;
-    width: 28ch;
+    min-width: 28ch;
     font-size: calc(1rem + 0.5vw);
     padding-left: 1rem;
     margin-bottom: 0.8rem;
@@ -733,8 +748,9 @@ footer {
 
 .sign-in-buttons {
     display: flex;
-    justify-content: start;
     gap: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 .sign-in-form .sign-in-btn,
